<resources>
    <string name="app_name">다하다</string>
    <string name="main_image_desc">TODO</string>

    <string name="title_activity_login">로그인</string>
    <string name="prompt_email">이메일</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in">로그인 / 회원가입</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="welcome">"어서오세요 "</string>
    <string name="invalid_username">유효한 아이디가 아닙니다.</string>
    <string name="invalid_password">비밀번호는 5글자 이상이어야 합니다.</string>
    <string name="login_failed">"로그인 실패"</string>
    <string name="list_login">로그인</string>

    <!--    MainActivity    -->
    <string name="icon_home">홈</string>
    <string name="icon_calendar">캘린더</string>
    <string name="icon_community">커뮤니티</string>
    <string name="icon_notice">알림</string>
    <string name="icon_mypage">마이페이지</string>
    <string name="icon_search">검색</string>

    <!--    CalendarFragment    -->
    <string name="wday0">하루에 물 2L를 마시기란 쉽지 않습니다. 큰 페트병 생수 한 병 분량이라고 하면 굉장히 많게 느껴지죠? 하지만 시작하지 않는 것보다 2L를 마시려고 노력하는 당신의 의지가 더 필요할 수도 있습니다. 억지로 2L를 채우려하지 말고 물 자주 마시는 습관을 만드시면 어떨까요?</string>
    <string name="wday7">하루에 물 2L를 마신 날이 일주일이 넘었습니다. 그 어려운 작심삼일을 이겨내고 일주일을 이겨낸 당신! 앞으로의 운동도 이런 7일을 반복한다고 생각하세요. 어느새 운동에 습관을 들이고 재미를 붙이실 당신을 보게될겁니다.</string>
    <string name="wday14">벌써 2주나 물 2L를 마시는 것에 성공했습니다. 연속 2주일 수도 있고, 아닐 수도 있지만 그것은 중요한게 아닙니다. 당신은 한 달의 절반 정도를 성공했습니다. 차근차근 더 늘려가면 됩니다. 급하지 않아요. 천천히 해보자구요! 다하다는 건강해지겠다는 의지를 가진 당신을 언제나 응원합니다.</string>
    <string name="wday21">3주를 넘게 마셨습니다. 몸의 변화가 생기셨나요? 화장실을 자주 가게 되셨다구요?! 그것도 좋은 일..이겠죠? 아무튼 당신은 그 어렵다는 작심삼일을 무려 7번이나 이겨냈습니다. 기분이 어떠신가요? 누구나 물을 마실 수 있지만, 계획을 짜고, 그 계획을 3주가 넘게 이뤄내는건 누구나 할 수 없습니다. 좋은 변화가 이뤄지길 바라겠습니다.</string>
    <string name="wday28">4주?! 4주라고요? 2월 달이었으면 한 달이었을겁니다. 정말 대단합니다!</string>

    <string name="day0">이번 주도 활기차게 시작해봅시다! 벌써 다이어트 반 했네~ 시작이 반이야~</string>
    <string name="day7">일주일 보낸 기분이 어떠신가요? 계획대로 잘 되어가고 있나요? 너무 결과가 안 나온다구요? 걱정하지 마세요. 조급한 마음을 가지면 오히려 스트레스를 받습니다. 빨리보단 꾸준히!</string>
    <string name="day14">2주가 지났습니다. 어제보다 더욱 건강한 다하다 회원님 손 한번 들어보시겠어요? 그대로 앞으로 뻗고 스쿼트 실시! 점점 성과가 보이지 않나요? 혹시 일주일 전보다 운동을 5분이라도 더 할 수 있게 되진 않으셨나요? 체력이 증가하고 있습니다!</string>
    <string name="day21">삐빅- 건강력이 상승했습니다. 3주 동안 꾸준하게 관리해 온 당신! 다하다가 아주 칭찬해~ 드립니다!</string>
    <string name="day28">4주 정도면 하루에 영단어 10개 씩 외운다고 했을 때 총 280단어를 외울 수 있습니다. 아주 그냥 운동기록으로 팔만 대장경을 만드실 기세에요!</string>

    <!--    MypageFragment    -->
    <string name="mypage_login">로그인</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_notice">공지사항</string>
    <string name="mypage_question">문의하기</string>
    <string name="mypage_option">환경설정</string>

    <!--    QuestionActivity    -->
    <string name="hint_email">답변 받을 이메일 주소</string>
    <string name="button_question">보내기</string>

    <string name="fragment_notice">알림 프래그먼트</string>
    <string name="fragment_community">커뮤니티 프래그먼트</string>

    <string name="txt_back">돌아가기</string>
    <string name="txt_rec_recipe">추천 레시피</string>
    <string name="txt_diet_recipe">내 레시피</string>
    <string name="txt_shopping">쇼핑하기</string>
    <string name="txt_my_exercisemap">내 운동코스</string>
    <string name="txt_rec_exercise">추천 운동법</string>
    <string name="txt_blank">커뮤니티</string>
    <string name="txt_shop_gmarket">지마켓</string>
    <string name="txt_shop_ssg">SSG</string>
    <string name="txt_shop_kurly">마켓컬리</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
