<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_mypage"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:text="@string/mypage_login"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_mypage"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:text="@string/mypage_notice"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_mypage"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:text="@string/mypage_question"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_mypage"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:text="@string/mypage_option"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>