<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_rec_recipe"
        android:textColor="@color/dahada_1"
        app:layout_constraintEnd_toEndOf="@+id/button_recipe"
        app:layout_constraintStart_toStartOf="@+id/button_recipe"
        app:layout_constraintTop_toBottomOf="@+id/button_recipe" />

    <TextView
        android:id="@+id/textView_exercisemap2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_my_exercisemap"
        android:textColor="@color/dahada_1"
        app:layout_constraintEnd_toEndOf="@id/button_exercisemap"
        app:layout_constraintStart_toStartOf="@+id/button_exercisemap"
        app:layout_constraintTop_toBottomOf="@id/button_exercisemap" />

    <TextView
        android:id="@+id/textView_rec_exercise2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_rec_exercise"
        android:textColor="@color/dahada_1"
        app:layout_constraintEnd_toEndOf="@id/button_rec_exercise"
        app:layout_constraintStart_toStartOf="@+id/button_rec_exercise"
        app:layout_constraintTop_toBottomOf="@id/button_rec_exercise" />

    <TextView
        android:id="@+id/textView_circle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_blank"
        android:textColor="@color/dahada_1"
        app:layout_constraintEnd_toEndOf="@id/button_circle"
        app:layout_constraintStart_toStartOf="@+id/button_circle"
        app:layout_constraintTop_toBottomOf="@id/button_circle" />

    <Button
        android:id="@+id/button_diet"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/lunch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button_shopping"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/supermarket"
        app:layout_constraintBottom_toBottomOf="@+id/button_diet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_diet"
        app:layout_constraintTop_toTopOf="@+id/button_diet" />

    <Button
        android:id="@+id/button_recipe"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/recipe"
        app:layout_constraintBottom_toBottomOf="@+id/button_diet"
        app:layout_constraintEnd_toStartOf="@+id/button_diet"
        app:layout_constraintRight_toLeftOf="@+id/button_diet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_diet"
        app:layout_constraintVertical_bias="1.0"></Button>

    <Button
        android:id="@+id/button_rec_exercise"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/gym"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_diet" />

    <Button
        android:id="@+id/button_exercisemap"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/exercisemap"
        app:layout_constraintBottom_toBottomOf="@+id/button_rec_exercise"
        app:layout_constraintEnd_toStartOf="@+id/button_rec_exercise"
        app:layout_constraintRight_toLeftOf="@+id/button_diet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_rec_exercise" />

    <Button
        android:id="@+id/button_circle"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="@+id/button_rec_exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_rec_exercise"
        app:layout_constraintTop_toTopOf="@+id/button_rec_exercise" />

    <Button
        android:id="@+id/button__LoginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dahada_1"
        android:text="@string/txt_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_rec_exercise2"></Button>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_image_desc"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_2" />

    <TextView
        android:id="@+id/textView_diet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_diet_recipe"
        android:textColor="@color/dahada_1"
        app:layout_constraintEnd_toEndOf="@+id/button_diet"
        app:layout_constraintStart_toStartOf="@+id/button_diet"
        app:layout_constraintTop_toBottomOf="@+id/button_diet" />

    <TextView
        android:id="@+id/textView_shopping2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_shopping"
        android:textColor="@color/dahada_1"
        app:layout_constraintEnd_toEndOf="@id/button_shopping"
        app:layout_constraintStart_toStartOf="@+id/button_shopping"
        app:layout_constraintTop_toBottomOf="@id/button_shopping" />

</androidx.constraintlayout.widget.ConstraintLayout>